[package]
name = "handlemyshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.27.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.2"
tui-term = { git = "https://github.com/a-kenji/tui-term", version = "0.1.2" }
vt100 = "0.15.2"
